// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageNav > snapshot > should match the snapshot across all variants > default 1`] = `
<div>
  <header
    class="flex items-center justify-between gap-4 border-b border-rule px-4 py-4 md:px-12 md:py-5"
  >
    <div
      class="flex min-w-[60px] items-center"
    >
      <a
        class="inline-flex items-center gap-1.5 font-mono text-[10px] uppercase tracking-wider text-ink-3 hover:text-ink"
        data-discover="true"
        data-testid="page-nav-back"
        href="/"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-left h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 19-7-7 7-7"
          />
          <path
            d="M19 12H5"
          />
        </svg>
        back
      </a>
    </div>
    <nav
      aria-label="Primary"
      class="flex items-center gap-3 font-mono text-[10px] uppercase tracking-wider md:gap-5"
      data-testid="page-nav"
    >
      <a
        aria-current="page"
        class="hover:text-ink text-ink"
        data-discover="true"
        data-testid="page-nav-nav-home"
        href="/"
      >
        Home
      </a>
      <a
        class="hover:text-ink text-ink-3"
        data-discover="true"
        data-testid="page-nav-nav-about"
        href="/about"
      >
        About
      </a>
      <a
        class="hover:text-ink text-ink-3"
        data-discover="true"
        data-testid="page-nav-nav-settings"
        href="/settings"
      >
        Settings
      </a>
      <a
        class="hidden text-ink-3 hover:text-ink md:inline"
        data-testid="page-nav-nav-github"
        href="https://github.com/DopaMindLabs/Writer"
        rel="noopener noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </nav>
  </header>
</div>
`;

exports[`PageNav > snapshot > should match the snapshot across all variants > no-back, active=/about 1`] = `
<div>
  <header
    class="flex items-center justify-between gap-4 border-b border-rule px-4 py-4 md:px-12 md:py-5"
  >
    <div
      class="flex min-w-[60px] items-center"
    />
    <nav
      aria-label="Primary"
      class="flex items-center gap-3 font-mono text-[10px] uppercase tracking-wider md:gap-5"
      data-testid="page-nav"
    >
      <a
        class="hover:text-ink text-ink-3"
        data-discover="true"
        data-testid="page-nav-nav-home"
        href="/"
      >
        Home
      </a>
      <a
        aria-current="page"
        class="hover:text-ink text-ink"
        data-discover="true"
        data-testid="page-nav-nav-about"
        href="/about"
      >
        About
      </a>
      <a
        class="hover:text-ink text-ink-3"
        data-discover="true"
        data-testid="page-nav-nav-settings"
        href="/settings"
      >
        Settings
      </a>
      <a
        class="hidden text-ink-3 hover:text-ink md:inline"
        data-testid="page-nav-nav-github"
        href="https://github.com/DopaMindLabs/Writer"
        rel="noopener noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </nav>
  </header>
</div>
`;
